# Pylon-Blob_detection

./: CMakeLists.txt  CMakeLists.txt.user.18  README.md  cameradetect.cpp
